--- a/UI/profile.html
+++ b/UI/profile.html
@@ -89,11 +89,11 @@
                 
               </div>
 
-              <script>
+              <script src="js/profile.js">
                   loadUserProfile();
                   loadVotingHistory();
               </script>
     <div id="snackbar">Some text some message..</div>
-    
+   
 </body>
 </html>
