164814083-feature(profile): consume update profile picture
- refactors code

[Delivers #164814083]

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -89,10 +89,11 @@
                 
               </div>
 
-              <script src="js/profile.js">
+              <script>
                   loadUserProfile();
                   loadVotingHistory();
               </script>
+              <script src="js/profile.js"></script>
     <div id="snackbar">Some text some message..</div>
    
 </body>
