164814083-feature(profile): consume update profile picture
- move profile.js to js/pages directory
- improve code quality

[Delivers #164814083]

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -93,7 +93,7 @@
                   loadUserProfile();
                   loadVotingHistory();
               </script>
-              <script src="js/profile.js"></script>
+              <script src="js/pages/profile.js"></script>
     <div id="snackbar">Some text some message..</div>
    
 </body>
