164814083-feature(profile): consume update profile picture
- change base url
- accept only images

[Delivers #164814083]

--- a/UI/profile.html
+++ b/UI/profile.html
@@ -49,7 +49,7 @@
                               
                               <button id="rm-btn">Remove image</button>
                             </details-menu>
-                            <input type="file" id="input-field">
+                            <input type="file" id="input-field" accept="image/*">
                         </details>
                     </div>
                     
